# snake

./: .gitignore  BUILD  MODULE.bazel  go.mod  main.go
game/: BUILD.bazel  play.go
models/: BUILD.bazel  board.go  game.go  snake.go
state/: BUILD.bazel  game.go  home.go  state.go
utils/: BUILD.bazel  draw.go
